[gd_scene load_steps=16 format=3 uid="uid://oak0oqq65b41"]

[ext_resource type="Script" path="res://Enemies/racoons/hacker/Hackermain.gd" id="1_2to67"]
[ext_resource type="PackedScene" uid="uid://bl4k1f21rgeol" path="res://Assets/3dModels/raccoons/hacker/hacker.tscn" id="2_fa48i"]
[ext_resource type="Script" path="res://Enemies/racoons/hacker/punch.gd" id="3_asf0c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_blpet"]
radius = 0.355888
height = 1.80676

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_exnev"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_a3v27"]
height = 5.39236
radius = 13.4456

[sub_resource type="SphereShape3D" id="SphereShape3D_clxmw"]
radius = 0.122483

[sub_resource type="SphereShape3D" id="SphereShape3D_ug7n7"]
radius = 1.52958

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f3637"]
albedo_color = Color(0, 0.756863, 0.270588, 0.623529)

[sub_resource type="SphereMesh" id="SphereMesh_ox850"]
material = SubResource("StandardMaterial3D_f3637")

[sub_resource type="SphereShape3D" id="SphereShape3D_30mrh"]
radius = 0.54

[sub_resource type="Animation" id="Animation_m0gft"]
resource_name = "haking"
length = 5.0
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.1, 1, 0.319455, 0.319455, 0.319455, 1.8, 1, 0.396584, 0.396584, 0.396584, 2, 1, 1, 1, 1, 2.8, 1, 2.8123, 2.8123, 2.8123, 3.5, 1, 22.1171, 22.1171, 22.1171, 4.3, 1, 1.41991, 1.41991, 1.41991, 4.7, 1, 0.383013, 0.383013, 0.383013)
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"notAttacking"
}]
}

[sub_resource type="Animation" id="Animation_y66fy"]
resource_name = "punching"
length = 2.5
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("punch")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.412979, -0.167, -0.236583, 0.6, 1, 0.539584, 0.081453, 0.120737, 1.7, 1, 0.433146, 0.358721, -0.822135, 2.5, 1, 0.433146, -0.145288, -0.210293)
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"notAttacking"
}]
}
tracks/2/type = "scale_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("punch")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(1.3, 1, 1, 1, 1, 1.7, 1, 2.49781, 2.49781, 2.49781, 2, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_c7ygf"]
resource_name = "Flying"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dnm0e"]
_data = {
"Flying": SubResource("Animation_c7ygf"),
"haking": SubResource("Animation_m0gft"),
"punching": SubResource("Animation_y66fy")
}

[node name="Hackermain" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0290375, 0, -0.0214834)
script = ExtResource("1_2to67")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_blpet")

[node name="Hacker" parent="." instance=ExtResource("2_fa48i")]
transform = Transform3D(-0.6, 2.09272e-16, -5.24537e-08, 2.09272e-16, 0.6, -2.09272e-16, 5.24537e-08, -2.09272e-16, -0.6, 0, -0.620301, 0)

[node name="HitBox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
shape = SubResource("CapsuleShape3D_exnev")

[node name="range" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="range"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.251257, 0)
shape = SubResource("CylinderShape3D_a3v27")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 5.0

[node name="punch" type="Area3D" parent="." groups=["enemyAttack"]]
transform = Transform3D(-1, 3.48787e-16, -1.50996e-07, 3.48787e-16, 1, -3.48787e-16, 1.50996e-07, -3.48787e-16, -1, 0.433146, 0.169718, -0.592694)
script = ExtResource("3_asf0c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="punch"]
transform = Transform3D(2.68909, -3.5743e-23, 7.20862e-15, 1.71089e-22, 2.68909, 2.89645e-22, 0, 5.29396e-22, 2.68909, 2.98023e-08, 0.112002, 0.135965)
shape = SubResource("SphereShape3D_clxmw")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="punchrange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="punchrange"]
shape = SubResource("SphereShape3D_ug7n7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.423895, 0, 0, 0, 0.423895, 0, 0, 0, 0.423895, 0, 0, -0.0285406)
cast_shadow = 0
mesh = SubResource("SphereMesh_ox850")

[node name="hackingAttack" type="Area3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/hackingAttack"]
shape = SubResource("SphereShape3D_30mrh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dnm0e")
}

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="range" to="." method="_on_range_area_entered"]
[connection signal="area_entered" from="punch" to="punch" method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="punchrange" to="." method="_on_punchrange_area_entered"]
[connection signal="area_exited" from="punchrange" to="." method="_on_punchrange_area_exited"]
